--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>jQuery Todo App</title>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script type="text/css" src="toDoList.css"></script>
+		<link rel="stylesheet" type="text/css" href="toDoList.css"/>
 </head>
 <body>
-
+<h1>Hello!</h1>
 
 <script type="text/javascript" src="toDoList.js"></script>
 
