--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>jQuery Todo App</title>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="toDoList.css"/>
+	<title>jQuery Todo List</title>
+	<script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js "></script>
+		<link rel="stylesheet" type="text/css" href="assets/css/toDoList.css "/>
 </head>
 <body>
-<h1>Hello!</h1>
+	<div id="container">
+		<h1><!-- TODO:  --> List</h1>
+		<input type="text">
 
-<script type="text/javascript" src="toDoList.js"></script>
+		<ul>
+			<li><span>X</span> Go to Potions Class</li>
+			<li><span>X</span> Buy New Robes</li>
+			<li><span>X</span> Visit Hagrid</li>
+		</ul>
+		<button type="button" name="button"></button>
+	</div>
+
+
+<script type="text/javascript" src="assets/js/toDoList.js "></script>
 
 </body>
 
