--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<title>jQuery Todo List</title>
 	<script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js "></script>
 		<link rel="stylesheet" type="text/css" href="assets/css/toDoList.css "/>
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="container">
-		<h1><!-- TODO:  --> List</h1>
-		<input type="text">
+		<h1>To-Do List</h1>
+		<input type="text" placeholder="Add New Todo">
 
 		<ul>
 			<li><span>X</span> Go to Potions Class</li>
 			<li><span>X</span> Buy New Robes</li>
 			<li><span>X</span> Visit Hagrid</li>
 		</ul>
-		<button type="button" name="button"></button>
 	</div>
 
 
