--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html>
 <head>
 	<title>jQuery Todo List</title>
-	<script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js "></script>
+
 		<link rel="stylesheet" type="text/css" href="assets/css/toDoList.css "/>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
+		<script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js "></script>
 </head>
 <body>
 	<div id="container">
-		<h1>To-Do List</h1>
+		<h1>To-Do List <i class="fas fa-plus"></i></h1>
 		<input type="text" placeholder="Add New Todo">
 
 		<ul>
-			<li><span>X</span> Go to Potions Class</li>
-			<li><span>X</span> Buy New Robes</li>
-			<li><span>X</span> Visit Hagrid</li>
+			<li><span><i class="fas fa-trash-alt"></i></span> Go to Potions Class</li>
+			<li><span><i class="fas fa-trash-alt"></i></span></span> Buy New Robes</li>
+			<li><span><i class="fas fa-trash-alt"></i></span></span> Visit Hagrid</li>
 		</ul>
 	</div>
 
